--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@toneflix-code/flickity-vue": "^1.0.1",
+    "flickity": "^3.0.0",
+    "moment": "^2.29.4",
     "vue": "^3.2.45",
+    "vue-flickity": "^1.2.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
