--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "moment": "^2.29.4",
+    "pinia": "^2.0.29",
     "swiper": "^8.4.5",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-star-ratings": "^1.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
